# ComputerVision

./: .gitignore  CMakeLists.txt  main.cpp
homework1/: CMakeLists.txt
homework1/extra_module/: disparity_filter.hpp  disparity_filters.cpp  edge_filter.hpp  fgs_filter.cpp
homework1/include/: depthcomputer.hpp  global_includes.hpp  stereocalibrator.hpp
homework1/src/: depthcomputer.cpp  imageloader.cpp  main.cpp  stereocalibrator.cpp
homework2/: CMakeLists.txt
homework2/lab1/: CMakeLists.txt
homework2/lab1/src/: demo_simple_operations.cpp  demo_simple_operations_b.cpp  main.cpp  simple_operations.cpp  simple_operations_b.cpp
homework2/lab2/: CMakeLists.txt
homework2/lab2/src/: compute_FPFH.cpp  compute_normals.cpp  demo_compute_FPFH.cpp  demo_compute_normals.cpp
homework2/lab3/: CMakeLists.txt
homework2/lab3/include/: plane_segmenter.h  utils.h  visualizer.h
homework2/lab3/src/: complete_registration.cpp  dataset_visualizer.cpp  icp_registration.cpp  pairwise_registration.cpp  plane_segmentation.cpp
homework2/lab4/: CMakeLists.txt
homework2/lab4/include/: fpfh.h  multi_cloud_register.h  plane_segmenter.h  registration.h  simple_viewer.h
homework2/lab4/src/: ground_based_people_detection.cpp  main_show_clouds_nao.cpp  main_show_clouds_people.cpp  nao_registration.cpp  people_detection.cpp
homework2/lab4/src/utils/: simple_viewer.cpp
homework2/report/: report.aux  report.tex
src/: depthcomputer.cpp  depthcomputer.hpp  generalincludes.hpp  global_includes.hpp  imageloader.cpp  imageloader.hpp  main.cpp  stereocalibrator.cpp  stereocalibrator.h  stereocalibrator.hpp  utils.hpp
src/extra-module/: disparity_filters.cpp  fgs_filter.cpp
